mess auth paypal

--- a/package.json
+++ b/package.json
@@ -85,6 +85,6 @@
     "pre-commit": "lint-staged"
   },
   "lint-staged": {
-    "*.{js,jsx}": "vue-cli-service lint"
+    "*.jsx": "vue-cli-service lint"
   }
 }
