--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "commit": "git add . && npm version patch && git push",
     "build": "vue-cli-service build && cp -r dist/* ../Desktop/fire/public/",
     "host": "cd ../Desktop/fire && firebase deploy --only hosting && cd ../../tutor-app",
-    "full": "npm run build && npm run host && npm version patch",
+    "full": "npm run build && npm run host && npm run commit",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
   },
