--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "commit": "git add . && npm version patch && git push",
+    "commit": "git add . && git commit -m 'fix' && git push",
     "build": "vue-cli-service build && cp -r dist/* ../Desktop/fire/public/",
     "host": "cd ../Desktop/fire && firebase deploy --only hosting && cd ../../tutor-app",
     "full": "npm run build && npm run host && npm run commit",
