--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@coreui/coreui": "^5.0.0",
     "@coreui/vue": "^5.0.0",
     "@paypal/paypal-js": "^8.0.4",
+    "@vueuse/core": "^10.9.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
