--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "commit": "git add . && git commit -m 'fix' && git push",
-    "build": "vue-cli-service build && cp -r dist/* ../Desktop/fire/public/",
-    "host": "cd ../Desktop/fire && firebase deploy --only hosting && cd ../../tutor-app",
+    "build": "vue-cli-service build && cp -r dist/* ../../Firestore/public/",
+    "host": "cd ../../Firestore && firebase deploy --only hosting && cd ../GIT/in-ynierka2",
     "full": "npm run build && npm run host",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
@@ -27,6 +27,7 @@
     "node-fetch": "^3.3.2",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
+    "vue-cal": "^4.8.1",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
