--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ node_modules
 
 
 # local env files
+.env
 .env.local
 .env.*.local
 
@@ -22,3 +23,4 @@ pnpm-debug.log*
 *.sln
 *.sw?
 notes.txt
+*cache*
