--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "dependencies": {
     "@coreui/coreui": "^5.0.0",
     "@coreui/vue": "^5.0.0",
+    "@headlessui/vue": "^1.7.22",
+    "@heroicons/vue": "^2.1.3",
     "@paypal/paypal-js": "^8.0.4",
+    "@types/winston": "^2.4.4",
     "@vueuse/core": "^10.9.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
@@ -26,10 +29,13 @@
     "firebaseui": "^6.1.0",
     "node-fetch": "^3.3.2",
     "register-service-worker": "^1.7.2",
-    "vue": "^3.2.13",
+    "usemodal-vue3": "^0.3.7",
+    "vdialog": "^1.6.0",
+    "vue": "^3.4.27",
     "vue-cal": "^4.8.1",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.4",
