--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/winston": "^2.4.4",
     "@vueuse/core": "^10.9.0",
     "axios": "^1.6.8",
+    "base64url": "^3.0.1",
     "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
     "dotenv": "^16.4.5",
@@ -52,6 +53,7 @@
     "@vue/vue3-jest": "^27.0.0-alpha.1",
     "babel-jest": "^27.0.6",
     "babelify": "^10.0.0",
+    "cypress": "^13.9.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
