--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "vue": "^3.4.27",
     "vue-cal": "^4.8.1",
     "vue-gtag-next": "^1.14.0",
+    "vue-multiselect": "^3.0.0",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0",
     "winston": "^3.13.0"
