--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "base64url": "^3.0.1",
     "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "firebase": "^10.11.0",
     "firebase-admin": "^12.0.0",
     "firebaseui": "^6.1.0",
+    "moment": "^2.30.1",
     "node-fetch": "^3.3.2",
     "register-service-worker": "^1.7.2",
     "usemodal-vue3": "^0.3.7",
