--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@headlessui/vue": "^1.7.22",
     "@heroicons/vue": "^2.1.3",
     "@paypal/paypal-js": "^8.0.4",
+    "@popperjs/core": "^2.11.8",
     "@types/winston": "^2.4.4",
     "@vueuse/core": "^10.9.0",
     "axios": "^1.6.8",
@@ -33,12 +34,14 @@
     "node-fetch": "^3.3.2",
     "register-service-worker": "^1.7.2",
     "usemodal-vue3": "^0.3.7",
+    "v-calendar": "^3.1.2",
     "vdialog": "^1.6.0",
     "vue": "^3.4.27",
     "vue-cal": "^4.8.1",
     "vue-gtag-next": "^1.14.0",
     "vue-multiselect": "^3.0.0",
     "vue-router": "^4.0.3",
+    "vue-simple-calendar": "^7.1.0",
     "vuex": "^4.0.0",
     "winston": "^3.13.0"
   },
