--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "commit": "git add . && git commit -m 'fix' && git push",
     "build": "vue-cli-service build && cp -r dist/* ../../Firestore/public/",
     "host": "cd ../../Firestore && firebase deploy --only hosting && cd ../GIT/in-ynierka2",
+    "fcm": "cp ./src/firebase-messaging-sw.js ../../Firestore/public/ && npm run host",
     "full": "npm run build && npm run host",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
